fixed plugin detail dialog: shadow barely visible on firefox/ie/safari

--- a/css/main.css
+++ b/css/main.css
@@ -1191,6 +1191,7 @@ button:focus {
 .ngdialog-content {
 	max-width: 970px;
 	padding-bottom: 0px;
+	position: relative;
 }
 
 .ngdialog-overlay {
